test-results/fieldsof.err
[31m./examples/fieldsof.cup:19:5: error: [0] Macro @fieldsof failed: Could not find definition for struct/type Base[0m
    @fieldsof(struct Base);
    [31m^[0m
